--- a/common/src/main/resources/assets/vinery/lang/en_us.json
+++ b/common/src/main/resources/assets/vinery/lang/en_us.json
@@ -308,6 +308,11 @@
   "text.autoconfig.vinery.option.items.banner.showTooltip": "Disable Tooltip",
   "text.autoconfig.vinery.option.items.basket": "Basket",
   "text.autoconfig.vinery.option.items.basket.blacklist": "Blacklist",
-  "text.autoconfig.vinery.option.items.basket.blacklist.basketBlacklist": "Entries"
+  "text.autoconfig.vinery.option.items.basket.blacklist.basketBlacklist": "Entries",
+  "text.autoconfig.vinery.option.trader": "Wandering Winemaker",
+  "text.autoconfig.vinery.option.trader.spawnChance": "Spawn Weight",
+  "text.autoconfig.vinery.option.trader.spawnWithMules": "Spawn with Mules",
+  "text.autoconfig.vinery.option.trader.spawnDelay": "Spawn Delay"
+
 
 }
